--- a/css/room.scss
+++ b/css/room.scss
@@ -17,6 +17,7 @@
     --color-blue-1: #629fd0;
     --color-gold: #eec373;
     --color-white: #ffffff;
+    --color-creamWhite: #f9f9f9;
     --color-grey: #ebebeb;
     --color-grey-1: #f5f5f5;
     --color-red: #83142c;
@@ -47,6 +48,32 @@ body {
     z-index: -1;
     clip-path: polygon(0 0, 38% 0, 63% 100%, 0% 100%);
 }
+
+#errorMessages {
+    position: fixed;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: var(--color-creamWhite);
+    top: 0;
+    left: 50%;
+    z-index: 10;
+    margin-top: 1rem;
+    transform: translate(-50%, -150%);
+
+    .error {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: bold;
+        color: var(--color-red-1);
+
+        i {
+            margin-left: 1rem;
+            color: var(--color-red-1);
+        }
+    }
+}
+
 .roomDisplay-container {
     position: relative;
     width: 100%;
@@ -100,6 +127,20 @@ body {
         .guest-container {
             display: flex;
             flex-direction: column;
+            // background-color: rgba(255, 255, 255, 0.1);
+            background-image: linear-gradient(
+                to bottom,
+                rgba(255, 255, 255, 0.6),
+                rgba(255, 255, 255, 0.1)
+            );
+            backdrop-filter: blur(10px);
+            padding: 1rem;
+            border-radius: 0.3rem;
+        }
+
+        #guest-disabled {
+            background-image: unset;
+            backdrop-filter: unset;
         }
 
         .arrivalMonth-container,
@@ -117,6 +158,7 @@ body {
             font-size: 1rem;
             text-align: center;
             margin-bottom: 1rem;
+            border-bottom: 2px solid var(--color-white);
         }
 
         p {
@@ -277,6 +319,34 @@ body {
             border-radius: 0.3rem;
 
             .image-container {
+                position: relative;
+                .price {
+                    font-family: var(--font-playfairDisplay);
+                    background-color: #2a363b;
+                    color: var(--color-white);
+                    border-radius: 1rem;
+                    padding: 0.5rem 1rem;
+                    position: absolute;
+                    left: 1rem;
+                    top: 1rem;
+                    font-weight: bold;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+
+                    // &::before {
+                    // }
+                    &::after {
+                        content: "";
+                        position: absolute;
+                        width: 100%;
+                        height: 100%;
+                        border: 2px solid var(--color-gold);
+                        border-radius: 1rem;
+                        left: 0.1rem;
+                        top: 0.1rem;
+                    }
+                }
                 width: 100%;
 
                 img {
