--- a/css/navbarbootstrap.css
+++ b/css/navbarbootstrap.css
@@ -21,6 +21,12 @@
     margin: 0.5em;
 }
 
+#navbarNavAltMarkup .nav-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media only screen and (min-width: 1200px) {
     #navbarNavAltMarkup .navbar .nav-item {
         padding: 0.5em 1em;
