--- a/css/room.scss
+++ b/css/room.scss
@@ -298,6 +298,7 @@ body {
             letter-spacing: 0.5rem;
             position: relative;
             padding: 0.5rem 3rem;
+            margin: 1rem auto;
 
             &::before {
                 content: "";
@@ -306,7 +307,7 @@ body {
                 height: 100%;
                 bottom: 0;
                 left: 0;
-                transform: translate(-10px);
+                transform: translate(-5px, -5px);
                 border: 0.1em solid var(--color-red);
                 // border-left: 0.1em solid var(--color-red);
                 // border-bottom: 0.1em solid var(--color-red);
@@ -319,7 +320,7 @@ body {
                 height: 100%;
                 right: 0;
                 top: 0;
-                transform: translate(10px);
+                transform: translate(5px, 5px);
                 // border-right: 0.1em solid var(--color-red);
                 // border-top: 0.1em solid var(--color-red);
                 border: 0.1em solid var(--color-gold);
