--- a/css/footeronly.css
+++ b/css/footeronly.css
@@ -23,6 +23,10 @@
     color: #fff;
 }
 
+.site-footer p {
+    color: rgba(255, 255, 255, 0.5);
+}
+
 .site-footer hr {
     border-top-color: #bbb;
     opacity: 0.5;
@@ -32,20 +36,22 @@
     margin: 20px 0;
 }
 
-.site-footer h6 {
+.site-footer h3 {
+    font-weight: bold;
     color: #fff;
-    font-size: 16px;
     text-transform: uppercase;
     margin-top: 5px;
     letter-spacing: 2px;
 }
 
 .site-footer a {
-    color: #fff;
+    /* color: #fff; */
+    color: rgba(255, 255, 255, 0.5);
 }
 
 .site-footer a:hover {
-    color: #fff;
+    /* color: #fff; */
+    color: yellow;
     text-decoration: none;
 }
 
@@ -59,7 +65,8 @@
 }
 
 .footer-links a {
-    color: #fff;
+    color: rgba(255, 255, 255, 0.5);
+    /* color: #fff; */
 }
 
 .footer-links a:active,
