--- a/css/room.scss
+++ b/css/room.scss
@@ -147,11 +147,12 @@ body {
         .guest-container {
             display: flex;
             flex-direction: column;
+            min-width: 7rem;
             // background-color: rgba(255, 255, 255, 0.1);
             background-image: linear-gradient(
                 to bottom,
-                rgba(255, 255, 255, 0.6),
-                rgba(255, 255, 255, 0.1)
+                rgba(255, 255, 255, 0.3),
+                rgba(255, 255, 255, 0)
             );
             backdrop-filter: blur(10px);
             padding: 1rem;
@@ -174,14 +175,18 @@ body {
         }
 
         h2 {
+            font-family: var(--font-playfairDisplay);
+            font-style: italic;
             color: #fff8f3;
             font-size: 1rem;
             text-align: center;
             margin-bottom: 1rem;
-            border-bottom: 2px solid var(--color-white);
+            // border-bottom: 1px solid var(--color-white);
+            box-shadow: 0px 10px 5px -5px rgba(0, 0, 0, 0.2);
         }
 
         p {
+            font-family: var(--font-playfairDisplay);
             color: var(--color-gold);
             text-align: center;
             font-size: 1.5rem;
@@ -229,6 +234,12 @@ body {
         }
 
         @media only screen and (min-width: 768px) {
+            .arrival-container,
+            .departure-container,
+            .guest-container {
+                min-width: 12rem;
+            }
+
             h2 {
                 font-size: 2rem;
             }
@@ -251,6 +262,12 @@ body {
         }
 
         @media only screen and (min-width: 992px) {
+            .arrival-container,
+            .departure-container,
+            .guest-container {
+                min-width: 15rem;
+            }
+
             h2 {
                 font-size: 2.5rem;
             }
