added some margins

--- a/css/room.scss
+++ b/css/room.scss
@@ -80,6 +80,7 @@ body {
     position: relative;
     width: 100%;
     height: 100%;
+    padding-bottom: 2rem;
 }
 
 .main-content {
@@ -301,6 +302,7 @@ body {
 
 .roomList-container {
     position: relative;
+    padding-bottom: 2rem;
 
     .roomListTitle-container {
         padding-top: 1rem;
