--- a/css/footeronly.css
+++ b/css/footeronly.css
@@ -91,6 +91,10 @@
     align-items: center;
     text-decoration: none;
     background-color: #33353d;
+    color: #818a91;
+}
+.site-footer .social-icons a i {
+    color: #818a91;
 }
 
 .copyright-text {
@@ -117,6 +121,9 @@
     padding-left: 0;
     margin-bottom: 0;
     list-style: none;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 .social-icons li {
@@ -135,14 +142,13 @@
 .social-icons a {
     background-color: #eceeef;
     color: #818a91;
+    display: flex;
+    align-items: center;
     font-size: 16px;
-    display: inline-block;
-    line-height: 44px;
     width: 44px;
     height: 44px;
-    text-align: center;
     margin-right: 8px;
-    border-radius: 100%;
+    border-radius: 50%;
     -webkit-transition: all 0.2s linear;
     -o-transition: all 0.2s linear;
     transition: all 0.2s linear;
