--- a/css/navbarbootstrap.css
+++ b/css/navbarbootstrap.css
@@ -15,6 +15,10 @@
     margin: 20px;
 }
 
+.navbar-toggler .navbar-toggler-icon {
+    font-size: 2rem;
+}
+
 #navbarNavAltMarkup .navbar-nav .nav-link {
     color: #ffffff;
     font-size: 2em;
@@ -25,6 +29,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.centered-logo {
+    margin-left: 0;
 }
 
 @media only screen and (min-width: 1200px) {
