--- a/css/navbarbootstrap.css
+++ b/css/navbarbootstrap.css
@@ -21,7 +21,7 @@
 
 #navbarNavAltMarkup .navbar-nav .nav-link {
     color: #ffffff;
-    font-size: 2em;
+    font-size: 2rem;
     margin: 0.5em;
 }
 
@@ -31,11 +31,20 @@
     align-items: center;
 }
 
-.centered-logo {
+/* .centered-logo {
     margin-left: 0;
+} */
+
+@media only screen and (min-width: 1024px) {
+    #navbarNavAltMarkup .navbar-nav .nav-link {
+        font-size: 1.5rem;
+    }
 }
 
 @media only screen and (min-width: 1200px) {
+    #navbarNavAltMarkup .navbar-nav .nav-link {
+        font-size: 2rem;
+    }
     #navbarNavAltMarkup .navbar .nav-item {
         padding: 0.5em 1em;
     }
@@ -48,7 +57,7 @@
     border: 2px solid black;
     background-color: #ffffff;
     color: black;
-    padding: 0.3em 3em;
+    padding: 0.1em 2em;
     margin: 0.05em;
     font-size: 20px;
     text-decoration: solid;
@@ -68,6 +77,17 @@
 
 /************************************ Underline Hover **************************/
 
+@media only screen and (min-width: 1024px) {
+    #navbarNavAltMarkup #booknow {
+        font-size: 1rem;
+    }
+}
+
+@media only screen and (min-width: 1200px) {
+    #navbarNavAltMarkup #booknow {
+        font-size: 1.5rem;
+    }
+}
 /* .navbar {
     justify-content: start;
 } */
